# Controlled-Arm-Robot-ROS2

./: README.md
ROS2-ARMRbot/PandaRobot/panda_ros2_gazebo/urdf/: panda.urdf.xacro  panda_macro.urdf.xacro  panda_ros2control.xacro  panda_transmission.xacro
ROS2-ARMRbot/PandaRobot/panda_ros2_gazebo/worlds/: panda.world
ROS2-ARMRbot/PandaRobot/panda_ros2_moveit2/config/: panda.srdf  panda_moveit2.rviz
ROS2-ARMRbot/PandaRobot/panda_ros2_moveit2/launch/: panda_interface.launch.py
ROS2-ARMRbot/image_viewer/: package.xml  setup.py
ROS2-ARMRbot/image_viewer/image_viewer/: image_viewer.py
ROS2-ARMRbot/plansys2_bt_example/: CMakeLists.txt  README.md  package.xml  pddl.tar.xz  src.tar.xz
ROS2-ARMRbot/plansys2_bt_example/launch/: plansys2_bt_example_launch.py
ROS2-ARMRbot/plansys2_bt_example/pddl/: bt_example.pddl  problem.pddl
ROS2-ARMRbot/plansys2_bt_example/src/: assemble_controller_node.cpp  assemble_controller_node.tar.xz  hello.tar.xz  move_action_node.cpp  my_server.cpp  my_server_goal.cpp  pick_up_action_node.cpp  place_action_node.cpp  stack_action_node.cpp  unstack_action_node.cpp
ROS2-ARMRbot/plansys2_bt_example/src/hello/: assemble_controller_node.cpp  my_server.cpp
ROS2-ARMRbot/py_pubsub/: package.xml  setup.py
ROS2-ARMRbot/py_pubsub/py_pubsub/: publisher_member_function.py
ROS2-ARMRbot/ros2_actions/scripts/: moveG_action.cpp  moveXYZW_action.cpp  moveXYZ_action.cpp
ROS2-ARMRbot/ros2_clients/: CMakeLists.txt  package.xml
ROS2-ARMRbot/ros2_clients/src/: copy.cpp  gazebo_actor.cpp
ROS2-ARMRbot/tu_int/: CMakeLists.txt  package.xml
ROS2-ARMRbot/tu_int/msg/: CustObj.msg
ROS2-ARMRbot/tu_int/srv/: CustSrv.srv  ExecuteActionsb.srv  ExecuteActionsc.srv  PosiObj.srv  SetGoal.srv  TaskExecution.srv
