<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_clients</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sai.harshitb.24@gmail.com">hashirama_b</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <depend>rclpy</depend>
  <depend>ros2_actions</depend>
  <depend>ros2_data</depend>
  <depend>ros2_grasping</depend>
  <depend>tu_int</depend>
  <depend>linkattacher_msgs</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
